# runintgen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml
examples/: dolfinx_integration.py  dolfinx_physical_points.py  dolfinx_quadrature_function.py  dolfinx_runtime_cell_quadrature_functions.py  dolfinx_runtime_two_subdomains.py  elasticity_runtime.py  laplacian_runtime.py  mixed_runtime_entities.py  quadrature_function_runtime.py  simple_example.py  stokes_runtime.py  write_runtime_codegen.py
runintgen/: __init__.py  analysis.py  basix_runtime.py  codegen_files.py  cpp_headers.py  custom_data_provider.py  dolfinx_utils.py  fe_tables.py  form_metadata.py  geometry.py  ir_runtime_map.py  jit.py  measures.py  quadrature_function.py  runtime_abi.py  runtime_api.py  runtime_data.py  runtime_tables.py  tabulation.py
runintgen/codegeneration/: __init__.py  runtime_integrals.py
runintgen/codegeneration/C/: __init__.py  integrals.py  integrals_template.py
runintgen/cpp/: basix_runtime_module.cpp  runintgen_runtime_abi.h  runtime_basix_wrapper.cpp  runtime_basix_wrapper.h  runtime_tabulation_helpers.h
runintgen/dolfinx/: __init__.py  custom_data.cpp  custom_data.h  utils.py
tests/: __init__.py  test_analysis.py  test_codegen.py  test_compiled_geometry.py  test_dolfinx_physical_points.py  test_fe_tables.py  test_form_metadata.py  test_forms_comparison.py  test_geometry.py  test_jit.py  test_measures.py  test_quadrature_function.py  test_runtime_data.py  test_runtime_vs_standard.py
