[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "runintgen"
version = "0.1.0"
description = "Runtime integration kernel generator for FEniCSx/FFCx"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FEniCSx Developers"}
]
dependencies = [
    "numpy",
    "fenics-ufl>=2024.0.0",
    "fenics-ffcx>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["runintgen*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
