[build-system]
requires = [
    "scikit-build-core>=0.10",
    "nanobind>=2.0",
    "fenics-basix>=0.11.0.dev0",
    "numpy",
]
build-backend = "scikit_build_core.build"

[project]
name = "runintgen"
version = "0.1.0"
description = "Runtime integration kernel generator for FEniCSx/FFCx"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Runintgen Developers"}
]
dependencies = [
    "numpy",
    "fenics-basix>=0.11.0.dev0",
    "fenics-ufl>=2025.3.0.dev0",
    "fenics-ffcx>=0.11.0.dev0",
]

[project.optional-dependencies]
dev = [
    "setuptools",
    "wheel",
    "scikit-build-core>=0.10",
    "nanobind>=2.0",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.scikit-build]
wheel.packages = ["runintgen"]
sdist.include = [
    "CMakeLists.txt",
    "runintgen/cpp/*.h",
    "runintgen/cpp/*.cpp",
    "runintgen/dolfinx/*.h",
    "runintgen/dolfinx/*.cpp",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
